--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -1,16 +1,12 @@
 <section class="hero is-fullheight has-text-centered" id="hero">
   <div class="hero-body">
     <div class="container">
-      <h1 class="title has-text-white is-size-1 is-uppercase has-text-weight-bold">
-        {{site.title}}
-      </h1>
-      <h3 class="subtitle has-text-white-bis is-uppercase has-text-weight-medium is-marginless">
-        {{site.description}}
-      </h3>
-      <hr>
-      <a href="{{site.url}}{{site.baseurl}}/#about"
-        class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal">Read More</a>
-      </a>
+      <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd has-image-centered animate__animated animate__backInDown">
+        <figure class="image"> <img class="is-rounded" src= {{site.site-image}} alt={{site.title}}></figure>
+     </div>
+     <h1 class="subtitle has-text-white is-size-3 is-uppercase has-text-weight-normal is-marginless animate__animated animate__backInUp"><span id="typed"></span></h1>
+     <hr>
+     <a href="/#about" class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal animate__animated animate__backInUp">Read More</a> <br> <br>
     </div>
   </div>
 </section>
