--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -1,5 +1,6 @@
 <!-- Include Meta Tags Here -->
 <meta charset="UTF-8">
+<meta http-equiv = "content-language" content = "en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1 user-scalable=no, shrink-to-fit=no">
@@ -44,3 +45,5 @@
 
     gtag('config', '{{site.google-analytics}}');
 </script>
+<!--Typed.js-->
+<script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
