--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -5,7 +5,7 @@
         <div class="navbar-brand">
             <a class="navbar-item"
                 href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">
-                <img src="/assets/images/logo.png">
+                <img src={{site.navbar-image}}>
                 <strong>&nbsp; {{site.title}}</strong>
             </a>
             <div class="navbar-burger" data-target="navbar-menu">
