--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -2,7 +2,7 @@
   <div class="hero-body">
     <div class="container">
       <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd has-image-centered animate__animated animate__backInDown">
-        <figure class="image"> <img class="is-rounded" src= {{site.site-image}} alt={{site.title}}></figure>
+        <figure class="image"> <img class="is-rounded" src= {{site.showcase-image}} alt={{site.title}}></figure>
      </div>
      <h1 class="subtitle has-text-white is-size-3 is-uppercase has-text-weight-normal is-marginless animate__animated animate__backInUp"><span id="typed"></span></h1>
      <hr>
