default.html updated for script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,9 +42,9 @@ layout: compress
 
 <script>
     var typed = new Typed('#typed', {
-        strings: ["Hello, Bonjour, नमस्ते !", "Priyanshu here..",
+        strings: ["नमस्ते !", "Priyanshu here..",
             "Curious about coading and data science!",
-            "Test Engineer by Profession but Passionate to learn coding",
+            "Test Engineer by Profession and Passionate to learn coding",
             "Welcome To My page!",
             "Do Visit my Blog!",
             "Visit my Small Projects!",
