--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -1,5 +1,7 @@
 <nav class="navbar is-black is-fixed-top" role="navigation" aria-label="main navigation" id="navbar">
-    <div class="container">
+    <div class="container" style="
+    margin-left: 0px;
+">
 
         <!-- logo or branding image on left side -->
         <div class="navbar-brand">
