style="     margin-bottom: 25px; "> added in <hr> and logo image resized

--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -5,7 +5,7 @@
         <figure class="image"> <img class="is-rounded" src= {{site.showcase-image}} alt={{site.title}}></figure>
      </div>
      <h1 class="subtitle has-text-white is-size-3 is-uppercase has-text-weight-normal is-marginless animate__animated animate__backInUp"><span id="typed"></span></h1>
-     <hr>
+     <hr style="margin-bottom: 25px;">
      <a href="/#about" class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal animate__animated animate__backInUp">Read More</a> <br> <br>
     </div>
   </div>
