--- a/_includes/project-card.html
+++ b/_includes/project-card.html
@@ -4,7 +4,8 @@
       id="project-card">
       <a href="{{project.link}}" target="_blank">
       <div class="has-background-black card">
-        <figure class="image is-3by1" style="background-image: url({{project.image}});">
+        <figure class="image is-3by1" style="background-image: url({{project.image}});
+         background-size: cover; height: 125px;">
         </figure>
         <div class="card-content">
           <h1 style="font-size: 22px;" class="title has-text-white">{{ project.name }}</h3><br>
