--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,8 +27,7 @@
 
             <!--Link Section-->
             <div class="column has-text-white">
-                <!--<h3>More Links</h3>-->
-                <h3>Visitors Count</h3>
+                <h3>More Links</h3>
                 <!--
                 {% for sitepage in site.html_pages offset: 4 %}
                 {% unless sitepage.url == '/'  limit: 2 %}
@@ -36,15 +35,11 @@
                     <a href="{{sitepage.url | absolute_url}}">{{sitepage.title}}</a>
                 </li>
                 -->
-                <!--                {% endunless %}
+                {% endunless %}
                 {% endfor %}
                 <li>
                     <a target="_blank" href="{{site.url}}{{site.baseurl}}/feed.xml">Subscribe via RSS</a>
-                </li>-->
-                <p id="visitor-count">Count: <span id="count">0</span></p>
-
-
-
+                </li>
             </div>
 
             <!--Blog-post Section-->
@@ -61,28 +56,4 @@
     <div class="has-background-black has-text-centered has-text-white" id="credits">
         <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | WebPage Developed using <a href="https://github.com/thedevslot/WhatATheme" target="_blank" rel="noopener noreferrer">WhatATheme</a> - A Theme made with <i class="fas fa-heart has-text-danger"></i> by <a href="https://www.twitter.com/thedevslot" target="_blank" rel="noopener noreferrer">TheDevsLot</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
     </div>
-
-
-
-    <script>
-        // Check if the visitor count is stored in local storage
-        if (localStorage.getItem("visitorCount")) {
-          // If it is, retrieve the visitor count and increment it by 1
-          let count = parseInt(localStorage.getItem("visitorCount"));
-          count++;
-          localStorage.setItem("visitorCount", count);
-        } else {
-          // If it's not, set the visitor count to 1
-          localStorage.setItem("visitorCount", 1);
-        }
-        // Update the visitor count displayed on the page
-        document.getElementById("count").innerHTML = localStorage.getItem("visitorCount");
-      </script>
-
-
-
-
-
-
-
 </footer>
