--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -34,16 +34,14 @@
 <meta itemprop="image" content="{% unless page.layout == 'post' %}{{site.site-image}}{% else %}{{page.post-image}}{% endunless %}">
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id={{site.google-analytics}}"></script>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JX7T5Z8SZ9"></script>
 <script>
-    window.dataLayer = window.dataLayer || [];
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-    function gtag() {
-        dataLayer.push(arguments);
-    }
-    gtag('js', new Date());
-
-    gtag('config', '{{site.google-analytics}}');
+  gtag('config', 'G-JX7T5Z8SZ9');
 </script>
 <!--Typed.js-->
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
