datetime font and size changed

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -15,7 +15,7 @@
                 </div>
             </div>
     
-            <div class="navbar-date " style="position: absolute; left: 50%; transform: translateX(-50%); text-align: center; font-weight: bold; display: flex;align-items: center;height: 100%;" id="currentDateTime"></div>
+            <div class="navbar-date " style="position: absolute; left: 50%; transform: translateX(-50%); text-align: center; font-weight: bold; display: flex;align-items: center;height: 100%; font-size: 12px; font-family: 'Comic Sans MS'" id="currentDateTime"></div>
     
             <!-- children of navbar-menu must be navbar-start and/or navbar-end -->
             <div class="navbar-menu has-background-black" id="navbar-menu">
