--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,6 @@
     <link rel="shortcut icon" href="{% if site.favicon-url %}{{site.favicon-url}}{% else %}{{site.site-image}}{{| absolute_url }}{% endif %}" type="image/x-icon">
     <style> .has-image-centered { margin-left: auto; margin-right: auto; }</style>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4177229870828980"
+     crossorigin="anonymous"></script>
 </head>
