--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -8,6 +8,9 @@
                     <img src={{site.navbar-image}}>
                     <strong>&nbsp; {{site.title}}</strong>
                 </a>
+                <!--<div class="navbar-date " style="position: absolute; left: 50%; transform: translateX(-50%); text-align: center; font-weight: bold; display: flex;align-items: center;height: 100%; font-size: 12px; font-family: 'Comic Sans MS'" id="currentDateTime"></div>-->
+
+                <div class="navbar-date " style="position: absolute; left: 50%; transform: translateX(-50%); text-align: center; font-weight: bold; font-size: 10px; font-family: 'Comic Sans MS'" id="currentDateTime"></div>
                 <div class="navbar-burger" data-target="navbar-menu">
                     <span></span>
                     <span></span>
@@ -15,7 +18,7 @@
                 </div>
             </div>
     
-            <div class="navbar-date " style="position: absolute; left: 50%; transform: translateX(-50%); text-align: center; font-weight: bold; display: flex;align-items: center;height: 100%; font-size: 12px; font-family: 'Comic Sans MS'" id="currentDateTime"></div>
+
     
             <!-- children of navbar-menu must be navbar-start and/or navbar-end -->
             <div class="navbar-menu has-background-black" id="navbar-menu">
