--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -56,6 +56,7 @@ a.navbar-item.is-active {
         right: 0px;
         bottom: 0px;
         left: 0px;
+        background-size: 100% 100%;
         position: absolute;
         /*opacity: 0.25*/;
         content: "";
