text under hero image updated

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -44,7 +44,8 @@ layout: compress
     var typed = new Typed('#typed', {
         strings: ["नमस्ते !", "Priyanshu here..",
             "Curious about coading and data science!",
-            "Test Engineer by Profession and Passionate to learn coding",
+            "Test Engineer by Profession..",
+            "Passionate to learn coding",
             "Welcome To My page!",
             "Do Visit my Blog!",
             "Visit my Small Projects!",
