--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -48,20 +48,20 @@
 
 <!-- Messenger Chat Plugin Code -->
 <div id="fb-root"></div>
-<script>(function(d, s, id) {
-    var js, fjs = d.getElementsByTagName(s)[0];
-    if (d.getElementById(id)) return;
-    js = d.createElement(s); js.id = id;
-    js.src = "https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js#xfbml=1&version=v2.12&autoLogAppEvents=1";
-    fjs.parentNode.insertBefore(js, fjs);
-  }(document, 'script', 'facebook-jssdk'));</script>
-  
-  <!-- Your customer chat code -->
-  <div class="fb-customerchat"
-    attribution=setup_tool
-    page_id="100090533160334"
-    theme_color="#0084ff">
-  </div>
+<!-- Your Chat Plugin code -->
+<div id="fb-customer-chat" class="fb-customerchat"></div>
+<script> 
+var chatbox = document.getElementById('fb-customer-chat'); 
+chatbox.setAttribute("page_id", "111048631902429"); 
+</script> 
+<!-- Your SDK code --> 
+<script> 
+window.fbAsyncInit = function() { FB.init({ xfbml : true, version : 'v12.0' }); }; (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; 
+if (d.getElementById(id)) return; 
+js = d.createElement(s); 
+js.id = id; js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk')); 
+</script>
+
 
 <!--Typed.js-->
 <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"></script>
