--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -49,7 +49,7 @@
 <!-- Messenger Chat Plugin Code -->
 <div id="fb-root"></div>
 <!-- Your Chat Plugin code -->
-<div id="fb-customer-chat" class="fb-customerchat" theme_color="#ff0000"></div>
+<div id="fb-customer-chat" class="fb-customerchat" theme_color="#3A3D4A"></div>
 <script> 
 var chatbox = document.getElementById('fb-customer-chat'); 
 chatbox.setAttribute("page_id", "111048631902429"); 
