--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -53,20 +53,29 @@
 <script> 
 var chatbox = document.getElementById('fb-customer-chat'); 
 chatbox.setAttribute("page_id", "111048631902429"); 
-chatbox.addEventListener('customerchat.dialogShow', function(event) { FB.CustomerChat.show( {dialog_id: '111048631902429'} ); 
-FB.CustomerChat.sendText('111048631902429', 'Hello! How can I help you today?'); 
-FB.CustomerChat.sendText('111048631902429', 'Let me know if you have any questions.'); 
-FB.CustomerChat.sendText('111048631902429', 'I am here to assist you.'); 
-FB.CustomerChat.sendText('111048631902429', 'Feel free to drop your whatsapp number, We will connect you shortly.'); }); 
+chatbox.addEventListener('customerchat.dialogShow', function(event) { 
+    FB.CustomerChat.show( {dialog_id: '111048631902429'} ); 
+    FB.CustomerChat.sendText('111048631902429', 'Hello! How can I help you today?'); FB.CustomerChat.sendText('111048631902429', 'Let me know if you have any questions.'); 
+    FB.CustomerChat.sendText('111048631902429', 'I am here to assist you.'); 
+    FB.CustomerChat.sendText('111048631902429', 'Feel free to drop your whatsapp number, We will connect you shortly.'); 
+    }); 
 </script> 
-<!-- Your SDK code --> 
-<script> window.fbAsyncInit = function() { FB.init({ xfbml : true, version : 'v12.0' }); }; (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk')); </script>
+
 <!-- Your SDK code --> 
 <script> 
-window.fbAsyncInit = function() { FB.init({ xfbml : true, version : 'v12.0' }); }; (function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; 
-if (d.getElementById(id)) return; 
-js = d.createElement(s); 
-js.id = id; js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; fjs.parentNode.insertBefore(js, fjs); }(document, 'script', 'facebook-jssdk')); 
+window.fbAsyncInit = function() 
+{ FB.init({ xfbml : true, version : 'v12.0' }); }; 
+(function(d, s, id) { 
+    var js, fjs = d.getElementsByTagName(s)[0]; 
+    if (d.getElementById(id)) return; 
+    js = d.createElement(s); js.id = id; 
+    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; 
+    fjs.parentNode.insertBefore(js, fjs);
+     }(document, 'script', 'facebook-jssdk')); 
+FB.Event.subscribe('customerchat.load', function(event) {
+    var dialog_id = event.detail.dialog_id;
+    console.log('Dialog ID:', dialog_id);
+  });
 </script>
 
 
