--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -52,20 +52,14 @@
 <div id="fb-customer-chat" class="fb-customerchat" theme_color="#3A3D4A"></div>
 <script> 
 var chatbox = document.getElementById('fb-customer-chat'); 
-chatbox.setAttribute("page_id", "111048631902429"); 
+chatbox.setAttribute("page_id", "{{site.chatbot-pageid}}"); 
 </script> 
 
 <!-- Your SDK code --> 
 <script> 
 window.fbAsyncInit = function() { FB.init({ xfbml : true, version : 'v12.0' });}
-(function(d, s, id) { 
-    var js, fjs = d.getElementsByTagName(s)[0]; 
-    if (d.getElementById(id)) return; 
-    js = d.createElement(s); 
-    js.id = id; 
-    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; 
-    fjs.parentNode.insertBefore(js, fjs);}
-    (document, 'script', 'facebook-jssdk')); 
+(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; fjs.parentNode.insertBefore(js, fjs);}
+(document, 'script', 'facebook-jssdk')); 
 </script>
 
 <!--Typed.js-->
