--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -64,6 +64,6 @@ window.fbAsyncInit = function() { FB.init({ xfbml : true, version : 'v12.0' });}
 
 
 <!--Typed.js-->
-<script>
+<script
 src="https://cdn.jsdelivr.net/npm/typed.js@2.0.11"
-</script>
+></script>
