--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -64,8 +64,8 @@ window.fbAsyncInit = function() { FB.init({ xfbml : true, version : 'v12.0' });
     logged_out_greeting: 'Hello! How can we help you today?', 
     greeting_dialog_display: 'show'
   } );};
-(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; fjs.parentNode.insertBefore(js, fjs);}
-(document, 'script', 'facebook-jssdk')); 
+(function(d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (d.getElementById(id)) return; js = d.createElement(s); js.id = id; js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js'; fjs.parentNode.insertBefore(js, fjs);})
+(document, 'script', 'facebook-jssdk'); 
 </script>
 
 
