--- a/_includes/showcase.html
+++ b/_includes/showcase.html
@@ -4,7 +4,7 @@
       <div class="column is-one-fifth-desktop is-one-fifth-tablet is-one-fifth-fullhd has-image-centered animate__animated animate__backInDown">
         <figure class="image"> <img class="is-rounded" src= {{site.showcase-image}} alt={{site.title}}></figure>
      </div>
-     <h1 class="subtitle has-text-white is-size-5 is-uppercase has-text-weight-normal is-marginless animate__animated animate__backInUp"><span id="typed"></span></h1>
+     <h1 class="subtitle has-text-white is-size-4 is-uppercase is-marginless animate__animated animate__backInUp has-text-weight-medium"><span id="typed"></span></h1>
      <hr style="margin-bottom: 25px;">
      <a href="/#about" class="button is-white is-rounded is-outlined is-uppercase has-text-weight-normal animate__animated animate__backInUp">Read More</a> <br> <br>
     </div>
