--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -63,7 +63,7 @@ a.navbar-item.is-active {
     }
     @media (max-width: 767px) {
         &::before {
-            background-size: contain;
+            background-size: cover;
         }
     }
 }
