Buy added in navbar priyanshu-store.html,store.html,store.md created

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -33,6 +33,8 @@
                     <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">CONTACT</a>
                     <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
                         href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>
+                    <a class="navbar-item" {% if page.layout == 'store' %}is-active{% endif %}"
+                    href="{{site.url}}{{site.baseurl}}/store">BUY</a>
                     {% include dropdown.html %}
                 </div>
     
