--- a/_includes/priyanshu-store.html
+++ b/_includes/priyanshu-store.html
@@ -2,12 +2,12 @@
 <p style="font-weight: bold; font-size: 45px; margin-top: 70px; margin-bottom: 20px; text-align: center;">Buy Now</p>
   <div style="display: inline-block;">
     <img src="/assets/images/cart.png" alt="Amazon icon" width="30" height="30" style="margin-left: 5px">
-    <a style="font-weight: bold; font-size: 25px; color: green;" target="_blank" href="https://www.amazon.in/?&_encoding=UTF8&tag=priyanshuc082-21&linkCode=ur2&linkId=9cb0a99bba4770059218f8a0868abe62&camp=3638&creative=24630">Buy from Amazon</a>
+    <a style="font-weight: bold; font-size: 25px; color: green;" target="_blank" href="https://www.amazon.in/?&_encoding=UTF8&tag=priyanshuc082-21&linkCode=ur2&linkId=9cb0a99bba4770059218f8a0868abe62&camp=3638&creative=24630">Buy Anything from Amazon</a>
   </div>
   <br><br>
   <div style="display: inline-block;">
     <img src="/assets/images/cart.png" alt="Amazon icon" width="30" height="30" style="margin-left: 5px">
-    <a style="font-weight: bold; font-size: 25px; color: green;" target="_blank" href="https://amzn.to/3jUKBUS">Amazon's Best seller</a>
+    <a style="font-weight: bold; font-size: 25px; color: green;" target="_blank" href="https://amzn.to/3jUKBUS">Amazon's Best Seller of All Segment</a>
   </div>
     <div class="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; opacity: 0.8; background-image: url('/assets/images/shopping.jpg'); background-size: cover; background-position: center;"></div>
     <div class="overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(4px);"></div>
