--- a/_includes/priyanshu-store.html
+++ b/_includes/priyanshu-store.html
@@ -9,6 +9,9 @@
     <img src="/assets/images/cart.png" alt="Amazon icon" width="30" height="30" style="margin-left: 5px">
     <a style="font-weight: bold; font-size: 25px; color: green;" target="_blank" href="https://amzn.to/3jUKBUS">Amazon's Best Seller of All Segment</a>
   </div>
+  <hr style="border-style: solid; border-color: black; border-width: 1px 0 0; color: rgb(8, 8, 8); margin-top: 25px;">
+
+
     <div class="background" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; opacity: 0.8; background-image: url('/assets/images/shopping.jpg'); background-size: cover; background-position: center;"></div>
     <div class="overlay" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; z-index: -1; background-color: rgba(255, 255, 255, 0.5); backdrop-filter: blur(4px);"></div>
     <div class="content" style="margin-top: 10px; padding: 20px;">
