--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,13 +12,13 @@
                     <br>
                     <div class="container columns is-centered animate__animated animate__backInUp">
                         <div>
-                            <a href="/{{site.url}}/{{site.baseurl}}/#contact"
+                            <a href="{{site.url}}/{{site.baseurl}}/#contact"
                                 class="button is-rounded is-uppercase has-text-weight-normal is-white is-outlined">Contact
                                 Me</a>
                             </a>
                         </div>
                         <div>
-                            <a href="/{{site.url}}/{{site.baseurl}}/blog"
+                            <a href="{{site.url}}/{{site.baseurl}}/blog"
                                 class="button is-rounded is-uppercase has-text-weight-normal is-white is-outlined">Blog</a>
                             </a>
                         </div>
