--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -29,12 +29,20 @@
                 <div class="navbar-end">
                     <a class="navbar-item {% if page.layout == 'default' %}is-active{% endif %}"
                         href="{% if page.layout == 'default' %}{{site.url}}{{site.baseurl}}/#{% else %}{{site.url}}{{site.baseurl}}/{% endif %}">HOME</a>
+                    <!--
                     <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#about">ABOUT</a>
                     <a class="navbar-item" href="{{site.url}}{{site.baseurl}}/#contact">CONTACT</a>
                     <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
                         href="{{site.url}}{{site.baseurl}}/blog">BLOG</a>
                     <a class="navbar-item" {% if page.layout == 'store' %}is-active{% endif %}"
-                    href="{{site.url}}{{site.baseurl}}/store">BUY</a>
+                    href="{{site.url}}{{site.baseurl}}/store">BUY</a>                
+                    -->
+                    <a class="navbar-item" href="/#about">ABOUT</a>
+                    <a class="navbar-item" href="/#contact">CONTACT</a>
+                    <a class="navbar-item {% if page.layout == 'blog' %}is-active{% endif %}"
+                        href="/blog">BLOG</a>
+                    <a class="navbar-item" {% if page.layout == 'store' %}is-active{% endif %}"
+                    href="/store">BUY</a>
                     {% include dropdown.html %}
                 </div>
     
