--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,6 +1,27 @@
 <section class="hero is-fullheight has-text-centered has-background-black-ter" id="contact">
     <div class="hero-body">
         <div class="container">
+
+            <h3 class="title is-2 has-text-white" style="margin-top: 0; margin-bottom: 25px;">Contact</h3>
+            <form action="https://formspree.io/f/mlekblej" method="POST" style=" display: inline-block; text-align: left; max-width: 500px; width: 100%;">
+              <div>
+                <label class="label is-uppercase has-text-weight-semibold has-text-white ">Name</label>
+                <input style="padding: 10px; font-size: 16px; margin-bottom: 20px; width: 100%; border-radius: 4px;" type="text" name="Name" required>
+              </div>
+              <div>
+                <label class="label is-uppercase has-text-weight-semibold has-text-white ">Email</label>
+                <input style="padding: 10px; font-size: 16px; margin-bottom: 20px; width: 100%; border-radius: 4px;" type="text" name="Email" required>
+              </div>
+              <div>
+                <label class="label is-uppercase has-text-weight-semibold has-text-white ">Message</label>
+                <input style="padding: 10px; font-size: 16px; margin-bottom: 20px; width: 100%; height: 60px; border-radius: 4px;" type="text" name="Message" required>
+              </div>
+              <div style="display: flex; justify-content: center;">
+                <button class="button is-dark is-uppercase has-text-weight-semibold has-text-white" style="margin-bottom: 15px; width: 200px " type="submit">Send</button>
+              </div>
+              
+            </form>
+
             {% unless site.facebook_username == %}
             <a id="contact-button" href="https://wa.me/{{site.contact}}"
                 class="button is-rounded is-uppercase has-text-weight-normal is-white is-outlined has-text-weight-semibold column is-two-fifths"
