visitors count added(footer.html, head.html and default.html)

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -60,4 +60,10 @@ layout: compress
 
     });
 </script>
+
+<script>
+  function callbackName(response) {
+    document.getElementById('visits').innerText = response.value;
+}
+</script>
 </html>
