--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -27,6 +27,7 @@
 
             <!--Link Section-->
             <div class="column has-text-white">
+                <h3>Visits : <span id="visits"></span></h3><br>
                 <h3>More Links</h3>
                 <!--
                 {% for sitepage in site.html_pages offset: 4 %}
