--- a/_includes/head.html
+++ b/_includes/head.html
@@ -8,4 +8,5 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.min.css"/>
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-4177229870828980"
      crossorigin="anonymous"></script>
+    <script async src="https://api.countapi.xyz/hit/priyanshuchandel.github.io/visits?callback=callbackName"></script>
 </head>
