--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -57,7 +57,12 @@
             </div>
         </div>
     </div>
+    <!--
     <div class="has-background-black has-text-centered has-text-white" id="credits">
         <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | WebPage Developed using <a href="https://github.com/thedevslot/WhatATheme" target="_blank" rel="noopener noreferrer">WhatATheme</a> - A Theme made with <i class="fas fa-heart has-text-danger"></i> by <a href="https://www.twitter.com/thedevslot" target="_blank" rel="noopener noreferrer">TheDevsLot</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
+    </div>
+    -->
+    <div class="has-background-black has-text-centered has-text-white" id="credits">
+        <i class="far fa-copyright"></i> {{ "now" | date: "%Y" }} | Developed using <a href="https://github.com/thedevslot/WhatATheme" target="_blank" rel="noopener noreferrer">WhatATheme</a> Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a>
     </div>
 </footer>
