--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -3,6 +3,7 @@
 <meta http-equiv = "content-language" content = "en">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
+<meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1 user-scalable=no, shrink-to-fit=no">
 <meta content='#000000' name='theme-color'/>
 <meta name="keywords" content="{{site.site-keywords}}">
