--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -43,6 +43,7 @@
                         href="/blog">BLOG</a>
                     <a class="navbar-item" {% if page.layout == 'store' %}is-active{% endif %}"
                     href="/store">BUY</a>
+                    <!--<a class="navbar-item" href="https://www.highrevenuegate.com/jwfmzsuwmm?key=8a6b1eaa1896be3c6d4db95d8f54c3a2">ADs</a>-->
                     {% include dropdown.html %}
                 </div>
     
