adds in about,buy,project and blog

--- a/_includes/priyanshu-store.html
+++ b/_includes/priyanshu-store.html
@@ -1,5 +1,15 @@
 <body style="margin: 0; padding: 0; font-family: Arial, sans-serif;">
       <p style="font-weight: bold; font-size: 45px; margin-top: 70px; margin-bottom: 20px; text-align: center;"><span class="grow-fade">Buy Now</span></p>
+      <script type="text/javascript">
+         atOptions = {
+             'key' : '989ba2b0f7ae50fdfc2401cf7d8f82cf',
+             'format' : 'iframe',
+             'height' : 90,
+             'width' : 728,
+             'params' : {}
+         };
+         document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/989ba2b0f7ae50fdfc2401cf7d8f82cf/invoke.js"></scr' + 'ipt>');
+     </script><br>
       <style>
          .grow-fade {
          display: inline-block;
@@ -135,4 +145,5 @@
          <h3><a href="https://amzn.to/3I58Jw5" target="_blank" rel="noopener">Best selling under 20000</a></h3>
          <h3><a href="https://amzn.to/3E9GgUA" target="_blank" rel="noopener">Best selling smartphones</a></h3>
       </div>
+      <script type='text/javascript' src='//pl19804952.highrevenuegate.com/04/d2/41/04d241a296075743c24f7d9aea3c512e.js'></script>
    </body>
