--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -22,6 +22,16 @@ layout: compress
                 {% include project-card.html %}
             </div>
         </div>
+        <script type="text/javascript">
+            atOptions = {
+                'key' : '989ba2b0f7ae50fdfc2401cf7d8f82cf',
+                'format' : 'iframe',
+                'height' : 90,
+                'width' : 728,
+                'params' : {}
+            };
+            document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/989ba2b0f7ae50fdfc2401cf7d8f82cf/invoke.js"></scr' + 'ipt>');
+        </script>
     </section>
     </div>
 
