--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -9,10 +9,19 @@ layout: compress
 
 <body>
     {% include navbar.html %}
-
     <section class="hero is-fullheight" id="blog">
         <div class="hero-body">
             <div class="container">
+                <script type="text/javascript">
+                    atOptions = {
+                        'key' : '989ba2b0f7ae50fdfc2401cf7d8f82cf',
+                        'format' : 'iframe',
+                        'height' : 90,
+                        'width' : 728,
+                        'params' : {}
+                    };
+                    document.write('<scr' + 'ipt type="text/javascript" src="http' + (location.protocol === 'https:' ? 's' : '') + '://www.profitabledisplaynetwork.com/989ba2b0f7ae50fdfc2401cf7d8f82cf/invoke.js"></scr' + 'ipt>');
+                </script>
                 {% include blogpage-heading.html %}
             </div>
         </div>
