--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -42,7 +42,7 @@ layout: compress
 <script>
     var typed = new Typed('#typed', {
         strings: ["नमस्ते !", "Priyanshu here..",
-            "Curious about coading and data science!",
+            "Curious about coding and data science!",
             "Test Engineer by Profession..",
             "Passionate to learn coding",
             "Welcome To My page!",
